tests/application/access-policy/inbound-rules-auth-policy-assert.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: inbound-rules-auth-policy-default-deny
spec:
  action: DENY
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
      to:
        - operation:
            paths:
              - /actuator*
            notPaths:
              - /actuator/health
              - /actuator/info
  selector:
    matchLabels:
      app: inbound-rules-auth-policy
